# Ros2Learning

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  README.md  note.txt
cpp_vscode_lab/: .gitignore  CMakeLists.txt  README.md
cpp_vscode_lab/scripts/: setup_glibc_source.sh
cpp_vscode_lab/src/: 01_hello.cpp  02_args.cpp  03_vector_sort.cpp  04_class_raii.cpp  05_threads.cpp
ros2_ws/src/ros2_learning_actions/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/ros2_learning_actions/config/: count_action_demo.yaml
ros2_ws/src/ros2_learning_actions/launch/: count_action_demo.launch.py
ros2_ws/src/ros2_learning_actions/src/: count_action_client.cpp  count_action_server.cpp
ros2_ws/src/ros2_learning_actions/test/: test_count_action.cpp
ros2_ws/src/ros2_learning_arm_basics/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/ros2_learning_arm_basics/docs/: MOVEIT_DEEP_DIVE.md  README.md
ros2_ws/src/ros2_learning_arm_basics/launch/: demo.launch.py
ros2_ws/src/ros2_learning_arm_basics/src/: arm_controller_params.cpp  arm_position_controller.cpp  arm_position_controller_main.cpp
ros2_ws/src/ros2_learning_behavior_tree/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/ros2_learning_behavior_tree/behavior_trees/: fetch_subtree.xml  main_tree_composition.xml  mock_blackboard_demo.xml  mock_fallback_demo.xml  simple_patrol.xml
ros2_ws/src/ros2_learning_behavior_tree/docs/: bt_learning_roadmap.md
ros2_ws/src/ros2_learning_behavior_tree/launch/: bt_demo.launch.py
ros2_ws/src/ros2_learning_behavior_tree/src/: bt_main.cpp
ros2_ws/src/ros2_learning_behavior_tree/test/: test_simple_patrol.cpp
ros2_ws/src/ros2_learning_composition/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/ros2_learning_composition/config/: pipeline_params.yaml
ros2_ws/src/ros2_learning_composition/launch/: pipeline_composed.launch.py  pipeline_dynamic.launch.py  pipeline_multi_container.launch.py
ros2_ws/src/ros2_learning_composition/src/: image_processor.cpp  image_producer.cpp  image_saver.cpp
ros2_ws/src/ros2_learning_composition/test/: test_composition.cpp
ros2_ws/src/ros2_learning_control_demo/: CMakeLists.txt  README.md  package.xml  simple_joint_hardware_plugin.xml  uncrustify.cfg
ros2_ws/src/ros2_learning_control_demo/config/: controllers.yaml
ros2_ws/src/ros2_learning_control_demo/launch/: demo.launch.py
ros2_ws/src/ros2_learning_control_demo/rviz/: demo.rviz
ros2_ws/src/ros2_learning_control_demo/src/: simple_joint_hardware.cpp
ros2_ws/src/ros2_learning_control_demo/urdf/: simple_joint.urdf.xacro
ros2_ws/src/ros2_learning_cpp/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/ros2_learning_cpp/include/: listener.hpp  talker.hpp
ros2_ws/src/ros2_learning_cpp/launch/: composition.launch.py  lifecycle_demo.launch.py  talker.launch.py
ros2_ws/src/ros2_learning_cpp/src/: listener.cpp  listener_main.cpp  nav2_client.cpp  nav2_client_main.cpp  talker.cpp  talker_main.cpp
ros2_ws/src/ros2_learning_custom_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/ros2_learning_custom_interfaces/action/: CountTask.action
ros2_ws/src/ros2_learning_custom_interfaces/msg/: TaskStatus.msg
ros2_ws/src/ros2_learning_custom_interfaces/srv/: GoTo.srv  SpawnTb3.srv
ros2_ws/src/ros2_learning_kinematics/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/ros2_learning_kinematics/src/: ik_demo_node.cpp  planar_2dof.cpp  spherical_wrist_6dof.cpp
ros2_ws/src/ros2_learning_kinematics/test/: test_planar_2dof.cpp  test_spherical_wrist_6dof.cpp
ros2_ws/src/ros2_learning_lifecycle/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/ros2_learning_lifecycle/config/: lifecycle_demo.yaml
ros2_ws/src/ros2_learning_lifecycle/launch/: lifecycle_managed.launch.py  lifecycle_manual.launch.py
ros2_ws/src/ros2_learning_lifecycle/src/: lifecycle_manager_node.cpp  processor_node.cpp  sensor_node.cpp
ros2_ws/src/ros2_learning_lifecycle/test/: test_lifecycle_transitions.cpp
ros2_ws/src/ros2_learning_manipulation_stub/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/ros2_learning_manipulation_stub/include/: manipulation_stub.hpp
ros2_ws/src/ros2_learning_manipulation_stub/launch/: manipulation_stub.launch.py
ros2_ws/src/ros2_learning_manipulation_stub/src/: manipulation_stub.cpp  manipulation_stub_main.cpp
ros2_ws/src/ros2_learning_multithreading/: CMakeLists.txt  README.md  REENTRANT_EXPLAINED.md  package.xml  ros2_execution_architecture.md
ros2_ws/src/ros2_learning_multithreading/launch/: multi_threaded.launch.py  single_threaded.launch.py
ros2_ws/src/ros2_learning_multithreading/src/: blocking_node.cpp  executor_demo_main.cpp
ros2_ws/src/ros2_learning_nav2_client/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/ros2_learning_nav2_client/include/: nav2_client.hpp
ros2_ws/src/ros2_learning_nav2_client/src/: nav2_client.cpp  nav2_client_main.cpp
ros2_ws/src/ros2_learning_panda_gazebo_demo/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/ros2_learning_panda_gazebo_demo/config/: bridge.yaml
ros2_ws/src/ros2_learning_panda_gazebo_demo/launch/: panda_gazebo_rviz.launch.py
ros2_ws/src/ros2_learning_panda_gazebo_demo/rviz/: panda_demo.rviz
ros2_ws/src/ros2_learning_panda_gazebo_demo/src/: panda_joint_commander.cpp  panda_joint_commander_main.cpp
ros2_ws/src/ros2_learning_panda_gazebo_demo/urdf/: panda.urdf
ros2_ws/src/ros2_learning_panda_gazebo_demo/worlds/: panda_demo.world
ros2_ws/src/ros2_learning_parameters_advanced/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/ros2_learning_parameters_advanced/config/: params.yaml
ros2_ws/src/ros2_learning_qos/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/ros2_learning_sysinfo_publisher/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/ros2_learning_sysinfo_qt_viewer/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/ros2_learning_task_runner/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/ros2_learning_tb3_spawner/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/ros2_learning_tf_quaternion_demo/: CMakeLists.txt  README.md  package.xml
(+126 files in other folders)
